# tagify

./: LICENSE  Makefile  README.md  pyproject.toml
tagify/: __init__.py  parser.py
tests/: basic.py  manual_basic.py  test_basics.py
